--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
             margin: 0;
             padding: 10px;
         }
+        
         .container {
             background: #F5F5F5;
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
             text-align: center;
-            width: 50%;
-            max-width: 600px;
             transition: transform 0.2s;
         }
-        .container:hover {
-            transform: scale(1.02);
-        }
+
         h2 {
             color: #004D4D;
             font-weight: 600;
@@ -67,16 +64,40 @@
             font-size: 18px;
             cursor: pointer;
             margin-top: 20px;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.2s;
         }
         button:hover {
             background: linear-gradient(90deg, #006666, #008B8B);
+            transform: scale(1.05);
         }
         .result {
             margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
             color: #004D4D;
+        }
+
+        /* 🔹 Desktop View (Wider Layout) */
+        @media (min-width: 768px) {
+            .container {
+                width: 50%;
+                max-width: 600px;
+            }
+        }
+
+        /* 🔹 Mobile View (Full Width, Compact Design) */
+        @media (max-width: 767px) {
+            .container {
+                width: 90%;
+                padding: 20px;
+            }
+            input, select, button {
+                font-size: 16px;
+                padding: 12px;
+            }
+            h2 {
+                font-size: 20px;
+            }
         }
     </style>
 </head>
@@ -120,7 +141,6 @@
     </div>
 
     <script>
-        // Prevent past date selection for start date
         document.getElementById("startDate").setAttribute("min", new Date().toISOString().split("T")[0]);
 
         document.getElementById("startDate").addEventListener("change", function() {
